welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:7: error: not found: value flase
  else {return flase}
               ^